syntax = "proto3";

import "auth/user_token.proto";  // Ensure the path is correct for the user_token.proto import

package review;

service ReviewService {
    rpc CreateReview(CreateReviewRequest) returns (ReviewResponse);
    rpc FindAllReviews(FindAllReviewsRequest) returns (FindAllReviewsResponse);
    rpc FindReviewById(FindReviewByIdRequest) returns (ReviewResponse);
    rpc UpdateReview(UpdateReviewRequest) returns (ReviewResponse);
    rpc DeleteReview(DeleteReviewRequest) returns (ReviewResponse);
}

message Review {
    string id = 1;
    string domain = 2;
    string product_id = 3;
    string user_id = 4;
    double rating = 5;
    string review = 6;
    string created_at = 7;
    string updated_at = 8;
    string deleted_at = 9;
}

message CreateReviewRequest {
    userToken.User user = 1;
    string product_id = 2;
    string user_id = 3;
    double rating = 4;
    string review = 5;
}

message FindAllReviewsRequest {
    userToken.User user = 1;
    string product_id = 2;
}

message FindReviewByIdRequest {
    userToken.User user = 1;
    string id = 2;
}

message UpdateReviewRequest {
    userToken.User user = 1;
    string id = 2;
    string domain = 3;
    string product_id = 4;
    string user_id = 5;
    double rating = 6;
    string review = 7;
}

message DeleteReviewRequest {
    userToken.User user = 1;
    string id = 2;
}

message ReviewResponse {
    Review review = 1;
}

message FindAllReviewsResponse {
    repeated Review reviews = 1;
}